# AIChecker

./: .gitignore  CMakeLists.txt  README.md  changelog.md  coverage.xml  lcov.info  report_chapter1_ua.txt
.github/workflows/: c-cpp.yml
docs/uml/: backend_patterns_aichecker.mmd  web_node_react_google_classroom.mmd
scripts/: link_preflight.ps1
settings/: app_settings.cfg  plagiarism_dataset.txt
settings/ollama/: Modelfile.aichecker  SYSTEM_PROMPT.txt
settings/ollama/prompts/: 01_json_contract.txt  02_evidence_rules.txt  03_language_quality.txt
site/: app.js  dashboard.html  dashboard.js  index.html  login.html  login.js  styles.css
src/: main.cpp
src/app/: AppController.cpp  AppController.h  AppControllerDependencyPolicy.h
src/config/: AppSettings.cpp  AppSettings.h  SettingsPathResolver.h
src/core/: AnalysisStrategies.h  Architecture.h  EventBus.h  Models.h  SubmissionStatusLabeler.h  WorkflowCommands.h
src/integration/: ClassroomStudentExporter.h  HttpClient.h  Services.h  StudentFilter.h  TextUtils.h  TokenProvider.h
src/server/: Api.cpp  Api.h  Controllers.cpp  Controllers.h  Domain.h  Services.cpp  Services.h  Stores.cpp  Stores.h  Utils.cpp  Utils.h
src/ui/: IntegrationStatusProbe.h  MainWindow.cpp  MainWindow.h
tests/: unitTests.cpp
uml/: загальна_архітектура.mmd  кор_логіка.mmd  послідовність_перевірки.mmd  сервак.mmd
